--- a/src/Tests/AlgorithmTests/AlgorithmTests.csproj
+++ b/src/Tests/AlgorithmTests/AlgorithmTests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Algorithms\Algorithms\Algorithms.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
